# splitter-bench-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: corpora_manifest.yaml
scripts/: build_evalset_with_llm.py  build_failure_gallery.py  plot_radar_per_corpus.py  render_results_md.py
src/splitter_bench/: config.py  costs.py
src/splitter_bench/corpora/: loaders.py
src/splitter_bench/pipelines/: benchmark.py  index.py  ingest.py
src/splitter_bench/splitters/: build.py  configs.yaml
src/splitter_bench/vectorstore/: pgvector_store.py
